# ChangeLog for dev-python/twython
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Mar 2011; James Rowe <jnrowe@gmail.com> -twython-1.3.4.ebuild:
  Removed obsolete version, 1.4.1 will be up for stabilisation before 1.3.4.

  01 Mar 2011; James Rowe <jnrowe@gmail.com> twython-1.3.4.ebuild,
  -files/twython-1.3.4-build_fixes.patch:
  Remove Python 3 support.

*twython-1.4.1 (01 Mar 2011)

  01 Mar 2011; James Rowe <jnrowe@gmail.com> +twython-1.4.1.ebuild,
  +files/twython-1.4.1-build_fixes.patch:
  Version bump [294].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

*twython-1.3.4 (11 Nov 2010)

  11 Nov 2010; James Rowe <jnrowe@gmail.com> +twython-1.3.4.ebuild,
  +files/twython-1.3.4-build_fixes.patch:
  Version bump [229].

  07 Nov 2010; James Rowe <jnrowe@gmail.com> twython-1.2.ebuild,
  metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  25 Apr 2010; James Rowe <jnrowe@gmail.com> twython-1.2.ebuild:
  Keyworded x86.

  23 Apr 2010; James Rowe <jnrowe@gmail.com> twython-1.2.ebuild:
  Keyworded amd64.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> twython-1.2.ebuild:
  Added a note about oauth dependency.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> twython-1.2.ebuild:
  Keyworded ~x86.

*twython-1.2 (24 Mar 2010)

  24 Mar 2010; James Rowe <jnrowe@gmail.com> +twython-1.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
