@@ -4,15 +4,17 @@ Hash: SHA1
 DIST twython-1.2-README.markdown 2759 RMD160 a6973c50c1d9cdbe8ac212319e92d57418ce97a2 SHA1 dabb7b84c39f18c4bd784d0bac7a6997f80691e4 SHA256 62242e262ed6c629afbb9d4115797be9eee48e3551427a0935bfc470b48aefe4
 DIST twython-1.2.tar.gz 24278 RMD160 71507f84d00762b0408af0ba21b95af0e5fb82bc SHA1 16f95e5d78af62154325a81db28e708b4e3e73de SHA256 26d5cfadb0d70330bb7049cbb05bef0a88a20e9c87537d467aa572302ba4b0f7
 DIST twython-1.4.1.tar.gz 19418 RMD160 c93008d0c725b9444e76ad748cc204f3e25e9298 SHA1 98ffaf688b5c4de06d478f983b4da96d1656b4be SHA256 fde6e3c2a30313449736429384ea41969f3d518a496d795c909467f7f40ca220
+DIST twython-1.4.2.tar.gz 19544 RMD160 ec1f644a7054c6673eeaa7630b95490d0554e22c SHA1 67f3b2c0e6d6631c613623af388584d6a7b828b9 SHA256 701d3965df5208c6b16abbce23110fa2db54defcf8dd99d14203a0600cefc7e4
 EBUILD twython-1.2.ebuild 819 RMD160 5ba9cdde1013c048d05c322752c6c51023561ac1 SHA1 f162df944258a8aba998c279189de5d9b44e8b7e SHA256 39b970cdde7e844f1c2ff2a4c1d2b53e0ae079e21e6ea1ee89e6b7d20d336064
 EBUILD twython-1.4.1.ebuild 921 RMD160 6ecc1176e87d1dd1b54322a02aa1a5f9535bce65 SHA1 7f4311250c090ee86205be1402f2ae39960c5c15 SHA256 257c49e094fceaf059e4c18b2686f5a117b299adcb8d20fe454409e5dbf5e96a
-MISC ChangeLog 1551 RMD160 6cf0d9cdaf515f8d70ab0f712a1e9101c3da164f SHA1 682a5b1ce6ac89146f41e744177f9af9018dcabd SHA256 3a41a7291392fb844e8d65c4ca3bf53c6710bab20ab93014e6c6e5970543481c
+EBUILD twython-1.4.2.ebuild 921 RMD160 6ecc1176e87d1dd1b54322a02aa1a5f9535bce65 SHA1 7f4311250c090ee86205be1402f2ae39960c5c15 SHA256 257c49e094fceaf059e4c18b2686f5a117b299adcb8d20fe454409e5dbf5e96a
+MISC ChangeLog 1672 RMD160 ea3da5e5ea634aa1d3fa8d4f6e89304ce19a1aa0 SHA1 47b110730998daf81565478484d1dd028976cf10 SHA256 8718d77173ec3d10abe5edbda0ebc4624889685c5ca2d5819b77448bef350d80
 MISC metadata.xml 1009 RMD160 3a1401d7285362319c29524023d9afc976d61d2a SHA1 b5d6359dce0d99943547074e8d771481d24caf7e SHA256 1bf67d0f7db54fe9ad505d6ba7155100f86f1f0d1e50574a57896b95cd7c5e17
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1tXpMACgkQzJrj3cAXR0mvkACfTwzv8i7I56UgVSrr2SibVbcr
-RCgAn1aANUL5m2gNII6GLhG2g3G6bS2c
-=+m3Z
+iEYEARECAAYFAk2sWukACgkQzJrj3cAXR0kw1wCghmomAdjeqX4nKMGFtwLWHk0M
+IvsAn0U6VfSgxXLFtwjRIc304HenRHM/
+=JHsm
 -----END PGP SIGNATURE-----
