@@ -522,6 +522,7 @@
 
   * `1.2 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/twython/twython-1.2.ebuild>`__  ``amd64``, ``x86``
   * `1.4.1 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/twython/twython-1.4.1.ebuild>`__  ``~amd64`` (due 2011-06-29), ``~x86`` (due 2011-06-29)
+  * `1.4.2 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/twython/twython-1.4.2.ebuild>`__  ``~amd64`` (due 2011-05-18), ``~x86`` (due 2011-05-18)
 
 * ``upoints`` - http://www.jnrowe.ukfsn.org/projects/upoints.html
 
