@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+|| ( >=dev-lang/python-2.6 dev-python/simplejson ) dev-python/httplib2 dev-python/oauth2 >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/t/twython/twython-1.4.2.tar.gz
+
+http://pypi.python.org/pypi/twython/
+MIT
+An easy (and up to date) way to access Twitter data with Python.
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
