@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*twython-1.4.2 (18 Apr 2011)
+
+  18 Apr 2011; James Rowe <jnrowe@gmail.com> +twython-1.4.2.ebuild:
+  Version bump [326].
+
   01 Mar 2011; James Rowe <jnrowe@gmail.com> -twython-1.3.4.ebuild:
   Removed obsolete version, 1.4.1 will be up for stabilisation before 1.3.4.
 
